changes to contact and address sections

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="row">
                             <div class="col-md-4">
                         <div class="card h-100 card shadow">
-                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken" style="width: 50%; height: auto; display: block; margin: 4 auto;">
+                            <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken" style="width: 55%; height: auto; display: block; margin: 4 auto;">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
                                 <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
@@ -207,19 +207,19 @@
                             <h5>Here's some links to delve a little deeper:</h5>
                             <div class="col-md-4">
                                 <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">
-                                    <img src="assets/images/MHFlogo.png" alt="Mental Health Foundation" style="width: 100px;">
+                                    <img src="assets/images/MHFlogo.png" alt="Mental Health Foundation" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Expert Mental Health Advice.</h6>
                             </div>
                             <div class="col-md-4">
                                 <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/">
-                                    <img src="assets/images/Mindlogo2.png" alt="Mind" style="width: 100px;">
+                                    <img src="assets/images/Mindlogo2.png" alt="Mind" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Get it off your chest.</h6>
                             </div>
                             <div class="col-md-4">
                                 <a href="https://www.nhs.uk/mental-health">
-                                    <img src="assets/images/NHSlogo.png" alt="NHS" style="width: 100px;">
+                                    <img src="assets/images/NHSlogo.png" alt="NHS" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Your local NHS resource.</h6>
                             </div>
@@ -255,8 +255,7 @@
                             </div>
                         </div>
                     </section id="Address">
-                            <div class="row">
-                            <h3 class="sub-heading-color">Contact info</h3>
+                            <div class="row text-center">
                             <address>
                                 <strong><i class="fa-solid fa-location-dot"></i>Ned's Shed Registered Charity</strong><br>
                                 15 River Street<br>
