layout and font changes

--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h1>What is Ned's Shed?</h1>
-                        <p>Ned's Shed is a real and virtual space where Cornish Men can talk.<br>
+                        <p id="intro-p">Ned's Shed is a real and virtual space where Cornish Men can talk.<br>
 
-                            <br>We're men right? Cornish men. We're not meant to share our feelings. Are we?
-                            Society expects us to deliver. And being in Cornwall, we're meant to be as tough as the
-                            elements and environment around us demand.<br>
+                            <br>We're Cornish men, we're not meant to share our feelings. Are we?
+                            <br>Society expects us to deliver. 
+                            We're meant to be as tough as the
+                            elements and environment around us.<br>
 
-                            <br>So what happens if you've got something bottled up and you need to share it? Because we
-                            all know the meaning of 'it's better out than in'.<br> Well if you're looking for somewhere,
+                            <br>So what happens if you've got something bottled up and you need to share it?
+                            <br> Well if you're looking for somewhere,
                             you've come to the right place.
                         </p>
                     </div>
@@ -122,7 +123,7 @@
                                 <div class="card-body">
                                     <i class="fa-regular fa-thumbs-up fa-4x"></i>
                                     <h4 class="card-title text-uppercase">COME ON IN</h4>
-                                    <p class="card-text">Enter the Shed and share whatever's on your mind. As we've said it's better out than in. Come to a meet up, or join or set up a video chat.</p>
+                                    <p class="card-text">Enter the Shed and share whatever's on your mind. It's better out than in. Come to a meet up, or join or set up a video chat.</p>
                                 </div>
                             </div>
                             <a class="nav-link" href="find-a-shed.html"><button type="button"><h4>Chat Now</h4></button></a>
@@ -232,8 +233,7 @@
                             <section id="Join">
                                 <div class="container">
                                     <div class="row">
-                                        <h2>Join us on Facebook, Instagram and X.</h2>
-                                        <h4>You can also fill in the form below and we'll get back to you.</h4>
+                                        <h2>Join us on Facebook, Instagram and X:</h2>
                                         <div class="social-links my-4">
                                             <a href="https://www.facebook.com" target="_blank"
                                                 aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
@@ -243,12 +243,15 @@
                                                     class="fa-brands fa-instagram"></i></a>
                                             <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
                                                 rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-                                        </div>
+                                            </div>
                                     </div>
                                         
+                                    <div class="row">
+                                        <div class="container">
                                         <form action="form.php" method="post">
+                                            <h4>You can also fill in the form below and we'll get back to you.</h4>
                                             <div class="form-group">
-                                                <label for="name">Email:</label>
+                                                <label for="name">Name:</label>
                                                 <input type="text" class="form-control" id="name" name="name">
                                                 <label for="Email">Email:</label>
                                                 <input type="text" class="form-control" id="email" name="email">
