--- a/index.html
+++ b/index.html
@@ -206,19 +206,19 @@
                         <div class="row text-center">
                             <h2>Need to know more about men's mental health issues?</h2>
                             <h5>Here's some links to delve a little deeper:</h5>
-                            <div class="col-md-4">
+                            <div class="col-md-4 d-flex flex-column align-items-center">
                                 <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">
                                     <img src="assets/images/MHFlogo.png" alt="Mental Health Foundation" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Expert Mental Health Advice.</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 d-flex flex-column align-items-center">
                                 <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/">
                                     <img src="assets/images/Mindlogo2.png" alt="Mind" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Get it off your chest.</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 d-flex flex-column align-items-center">
                                 <a href="https://www.nhs.uk/mental-health">
                                     <img src="assets/images/NHSlogo.png" alt="NHS" class="img-fluid" style="width: 100px;">
                                 </a>
@@ -249,7 +249,7 @@
                                     <div class="row">
                                         <div class="container">
                                         <form action="form.php" method="post">
-                                            <h4>You can also fill in the form below and we'll get back to you.</h4>
+                                            <h4>You can also fill in the form below and we'll get back to you:</h4>
                                             <div class="form-group">
                                                 <label for="name">Name:</label>
                                                 <input type="text" class="form-control" id="name" name="name">
@@ -257,22 +257,24 @@
                                                 <input type="text" class="form-control" id="email" name="email">
                             </div>
                         </div>
-                    </section id="Address">
-                            <div class="row text-center">
-                            <address>
-                                <strong><i class="fa-solid fa-location-dot"></i>Ned's Shed Registered Charity</strong><br>
-                                15 River Street<br>
-                                Truro<br>
-                                Cornwall TR1 1AA
-                            </address>
-                            <p><i class="fa-solid fa-phone"></i> 01872 111000<br>
-                            </p>
 </div>
 </div>
 </section>
 </main>
 <!-- Contact info -->
     </footer>
+        <div class="container-fluid" id="address">
+            <div class="row text-center">
+                <address>
+                    <strong><i class="fa-solid fa-location-dot"></i>Ned's Shed Registered Charity</strong><br>
+                    15 River Street
+                    Truro
+                    Cornwall TR1 1AA
+                </address>
+                <p><i class="fa-solid fa-phone"></i> 01872 111000<br>
+                </p>
+            </div>
+        </div>
     <p>&copy; 2025 BW Wellness Project. All rights reserved.</p>
 </footer>
 </body>
