new form changes

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                                 <section id="join-us" class="container-section">
                                                     <div class="container">
                                                         <div class="row">
-                                                            <div class="col-12 text-center">
+                                                            <div class="form-group mb-3">
                                                                 <h2>Join us</h2>
                                                                 <h4>Fill in the form below and we'll get back to you:</h4>
                                                             </div>
@@ -258,7 +258,7 @@
                                                                 </form>
                                                             </div>
                                                             <div class="col-12 col-md-6 text-center">
-                                                                <h4>Or find us on:</h4>
+                                                                <h6>Or find us on:</h6>
                                                                 <div class="social-links my-4">
                                                                     <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">
                                                                         <i class="fa-brands fa-square-facebook"></i>
