--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="#links">More info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Join">Join Us</a>
+                        <a class="nav-link" href="#join-us">Join Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
