--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                                         <div class="row">
                                                             <div class="form-group mb-3">
                                                                 <h2>Join us</h2>
-                                                                <h4>Fill in the form below and we'll get back to you:</h4>
+                                                                <h6>Get in touch and we'll get back to you soon:</h6>
                                                             </div>
                                                         </div>
                                                         <div class="row">
