changes to cta in how to section

--- a/index.html
+++ b/index.html
@@ -123,10 +123,9 @@
                                 <div class="card-body">
                                     <i class="fa-regular fa-thumbs-up fa-4x"></i>
                                     <h4 class="card-title text-uppercase">COME ON IN</h4>
-                                    <p class="card-text">Enter the Shed and share whatever's on your mind. It's better out than in. Come to a meet up, or join or set up a video chat.</p>
+                                    <p class="card-text">Enter the Shed and share whatever's on your mind. It's better out than in. <a href=#join-us>Join</a> and then come to a meet up or a video chat.</p>
                                 </div>
                             </div>
-                            <a class="nav-link" href="find-a-shed.html"><button type="button"><h4>Chat Now</h4></button></a>
                         </div>
             </div>
 </section>
@@ -178,8 +177,8 @@
                             <img src="assets/images/Kencopy.png" class="card-img-top" id="portrait" alt="Ken" style="width: 53%; height: auto; display: block; margin: 4 auto;">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Ken, 41, Camborne</h4>
-                                <p class="card-text">"I have never classed myself as a loner, but I did for many reasons
-                                    find myself alone. Then I joined Ned's Shed and made new friends."</p>
+                                <p class="card-text"><em>"I have never classed myself as a loner, but I did for many reasons
+                                    find myself alone. Then I joined Ned's Shed and made new friends."</em></p>
                             </div>
                         </div>
                     </div>
@@ -188,8 +187,8 @@
                             <img src="assets/images/Mike3.png" class="card-img-top" id="portrait" alt="Mike" style="width: 50%; height: auto; display: block; margin: 4 auto;">
                             <div class="card-body">
                                 <h4 class="card-title text-uppercase">Mike, 38, Tintagel</h4>
-                                <p class="card-text">"I found myself widowed at an early age, but Ned's Shed helped me
-                                    start anew, and also provided an instant rugby team."</p>
+                                <p class="card-text"><em>"I found myself widowed at an early age, but Ned's Shed helped me
+                                    start anew, and also provided an instant rugby team."</em></p>
                             </div>
                         </div>
                     </div>
@@ -198,8 +197,8 @@
                             <img src="assets/images/CornishCliff3.png" class="card-img-top" id="portrait" alt="Cliff" style="width: 50%; height: auto; display: block; margin: 4 auto;">
                             <div class="card-body">
                             <h4 class="card-title text-uppercase">Cliff, 52, St Austell</h4>
-                            <p class="card-text">"I was redundent for a while and had some health issues, but Ned's Shed
-                                helped me realise I wasn't the only one."</p>
+                            <p class="card-text"><em>"I was redundent for a while and had some health issues, but Ned's Shed
+                                helped me realise I wasn't the only one."</em></p>
                                 </div>
                             </div>
                         </div>
