--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="#join-us">Join Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</a></button>
+                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</button></button-type></a>
                     </li>
                 </ul>
             </div>
@@ -103,7 +103,7 @@
                         <div class="col-md-4">
                             <div class="card h-100 card shadow">
                                 <div class="card-body">
-                                    <i class="fa-solid fa-door-closed fa-4x" alt="closed door"></i>
+                                    <i class="fa-solid fa-door-closed fa-4x"></i>
                                     <h4 class="card-title text-uppercase">WHY OPENING UP IS DIFFICULT FOR US</h4>
                                     <p class="card-text">Ever heard the phrase 'Man Up'? Revealing our emotions is a sign of weakness right? Well society is changing, we don't have to keep it all in anymore.</p>
                                 </div>
@@ -112,7 +112,7 @@
                         <div class="col-md-4">
                             <div class="card h-100 card shadow">
                                 <div class="card-body">
-                                    <i class="fa-solid fa-ear-listen fa-4x" alt="Ear"></i>
+                                    <i class="fa-solid fa-ear-listen fa-4x"></i>
                                     <h4 class="card-title text-uppercase">WE'RE ALL LISTENING MATE</h4>
                                     <p class="card-text">If you have a problem, there's immediate support in the Shed. Where you have instant access to men who want to listen, help or just have a bit of banter.</p>
                                 </div>
