--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="#join-us">Join Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</button></button-type></a>
+                        <a class="nav-link" href="find-a-shed.html"><button-type="button">Find a shed</button-type></a>
                     </li>
                 </ul>
             </div>
