--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- Hero -->
 
-        <header id="home" class="header hero" style="padding: 80px 0; margin-bottom: 30px;">
+    <header id="home" class="header hero" style="padding: 80px 0; margin-bottom: 30px;">
         <div class="container-fluid text-center">
             <div class="row">
                 <div>
@@ -73,21 +73,19 @@
             </div>
         </div>
     </header>
-
+    
     <main>
-<!--Intro Section -->
+        <!-- Intro Section -->
         <section id="intro" class="container" style="padding: 20px 0;">
             <div class="container mx-auto section">
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h1>What is Ned's Shed?</h1>
                         <p id="intro-p">Ned's Shed is a real and virtual space where Cornish Men can talk.<br>
-
                             <br>We're Cornish men, we're not meant to share our feelings. Are we?
                             <br>Society expects us to deliver. 
                             We're meant to be as tough as the
                             elements and environment around us.<br>
-
                             <br>So what happens if you've got something bottled up and you need to share it?
                             <br> Well if you're looking for somewhere,
                             you've come to the right place.
@@ -96,7 +94,7 @@
                 </div>
             </div>
         </section>
-
+        
         <section class="container">
             <div class="container mx-auto section">
                 <div class="row">
@@ -134,38 +132,23 @@
 
 <!-- Gallery -->
 <section id="gallery">
-    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/bbq.jpg" class="d-block w-100" alt="Slide 1">
+    <div class="container">
+        <div class="row" id="photos">
+            <div class="col-6 col-md-3">
+                <img src="assets/images/bbq.jpg" alt="bbq" class="img-thumbnail">
             </div>
-            <div class="carousel-item">
-                <img src="assets/images/Hiking.jpg" class="d-block w-100" alt="Slide 2">
+            <div class="col-6 col-md-3">
+                <img src="assets/images/Funnyman.jpg" alt="referee" class="img-thumbnail">
             </div>
-            <div class="carousel-item">
-                <img src="assets/images/Funnyman.jpg" class="d-block w-100" alt="Slide 3">
+            <div class="col-6 col-md-3">
+                <img src="assets/images/Hiking.jpg" alt="hiking" class="img-thumbnail">
             </div>
-            <div class="carousel-item">
-                <img src="assets/images/Playstation.jpg" class="d-block w-100" alt="Slide 4">
+            <div class="col-6 col-md-3">
+                <img src="assets/images/chat.png" alt="playstation" class="img-thumbnail">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleRide" role="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleRide" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
-
-    <script>
-        $(document).ready(function(){
-            $('#carouselExampleRide').carousel({
-                interval: 2000 // Change the interval time (in milliseconds) as needed
-            });
-        });
-    </script>
+</section>
 
 </section>
 
