--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Bootstrap CSS -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -30,10 +28,10 @@
     <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
 
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/" alt="logo" class="logo">
+                <img src="assets/favicon/favicon_io/favicon-32x32.png" alt="logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -228,7 +226,7 @@
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-12 col-md-6">
-                                                                <form id="booking-form" action="form.php" method="post">
+                                                                <form id="booking-form" action="form.php" method="post" onsubmit="return showSuccessMessage(event)">
                                                                     <div class="form-group mb-3">
                                                                         <label for="name">Name:</label>
                                                                         <input type="text" class="form-control" id="name" name="name" required>
@@ -278,8 +276,29 @@
 </body>
 
 <!-- Font Awesome kit -->
+
 <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
 
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
+ <!-- Custom JS -->
+ <script>
+    function showSuccessMessage(event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        // Display the success message
+        alert("Thank you for getting in touch! We will get back to you soon.");
+
+        // Optionally, you can reset the form
+        document.getElementById("booking-form").reset();
+
+        // Return false to prevent the form from submitting
+        return false;
+    }
+</script>
 </body>
 
 </html>
