--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         event.preventDefault(); // Prevent the default form submission
 
         // Display the success message
-        alert("Thank you for getting in touch! We will get back to you soon.");
+        alert("Thank for submitting your details. We'll get back to you soon.");
 
         // Optionally, you can reset the form
         document.getElementById("booking-form").reset();
