--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-
+<!-- Other meta tags and links -->
+<script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -124,9 +126,9 @@
                                 </div>
                             </div>
                         </div>
-            </div>
+                    </div>
+                </div>
 </section>
-
 <!-- Gallery -->
 <section id="gallery">
     <div class="container">
@@ -193,19 +195,19 @@
                             <h5>Here's some links to delve a little deeper:</h5>
                             <div class="col-md-4 d-flex flex-column align-items-center">
                                 <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">
-                                    <img src="assets/images/MHFlogo.png" alt="Mental Health Foundation" class="img-fluid" style="width: 100px;">
+                                    <img src="assets/images/MHFlogo.png" target="_blank" alt="Mental Health Foundation" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Expert Mental Health Advice.</h6>
                             </div>
                             <div class="col-md-4 d-flex flex-column align-items-center">
                                 <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/">
-                                    <img src="assets/images/Mindlogo2.png" alt="Mind" class="img-fluid" style="width: 100px;">
+                                    <img src="assets/images/Mindlogo2.png" target="_blank" alt="Mind" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Get it off your chest.</h6>
                             </div>
                             <div class="col-md-4 d-flex flex-column align-items-center">
                                 <a href="https://www.nhs.uk/mental-health">
-                                    <img src="assets/images/NHSlogo.png" alt="NHS" class="img-fluid" style="width: 100px;">
+                                    <img src="assets/images/NHSlogo.png" target="_blank" alt="NHS" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Your local NHS resource.</h6>
                             </div>
@@ -277,8 +279,6 @@
 
 <!-- Font Awesome kit -->
 
-<script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
-
 <!-- Bootstrap JS and dependencies -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
@@ -300,6 +300,5 @@
     }
 </script>
 </body>
-
 </html>
 
