add links to open in new tab

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 <!-- Other meta tags and links -->
-<script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/d1d4e72825.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -193,20 +193,20 @@
                         <div class="row text-center">
                             <h2>Need to know more about men's mental health issues?</h2>
                             <h5>Here's some links to delve a little deeper:</h5>
-                            <div class="col-md-4 d-flex flex-column align-items-center">
-                                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health">
-                                    <img src="assets/images/MHFlogo.png" target="_blank" alt="Mental Health Foundation" class="img-fluid" style="width: 100px;">
+                            <div class="col-md-4 d-flex flex-column align-items-center" target="_blank" rel="noopener noreferrer">
+                                <a href="https://www.mentalhealth.org.uk/explore-mental-health/a-z-topics/men-and-mental-health" target="_blank" rel="noopener noreferrer">    
+                                <img src="assets/images/MHFlogo.png" alt="Mental Health Foundation" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Expert Mental Health Advice.</h6>
                             </div>
                             <div class="col-md-4 d-flex flex-column align-items-center">
-                                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/">
-                                    <img src="assets/images/Mindlogo2.png" target="_blank" alt="Mind" class="img-fluid" style="width: 100px;">
+                                <a href="https://www.mind.org.uk/information-support/your-stories/why-men-need-to-talk/" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Mindlogo2.png" alt="Mind" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Get it off your chest.</h6>
                             </div>
                             <div class="col-md-4 d-flex flex-column align-items-center">
-                                <a href="https://www.nhs.uk/mental-health">
+                                <a href="https://www.nhs.uk/mental-health " target="_blank" rel="noopener noreferrer">
                                     <img src="assets/images/NHSlogo.png" target="_blank" alt="NHS" class="img-fluid" style="width: 100px;">
                                 </a>
                                 <h6>Your local NHS resource.</h6>
@@ -243,13 +243,13 @@
                                                             <div class="col-12 col-md-6 text-center">
                                                                 <h6>Or find us on:</h6>
                                                                 <div class="social-links my-4">
-                                                                    <a href="https://www.facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">
+                                                                    <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook page (opens in a new tab)">
                                                                         <i class="fa-brands fa-square-facebook"></i>
                                                                     </a>
-                                                                    <a href="https://www.instagram.com" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener">
+                                                                    <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Instagram page (opens in a new tab)">
                                                                         <i class="fa-brands fa-instagram"></i>
                                                                     </a>
-                                                                    <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page (opens in a new tab)" rel="noopener">
+                                                                    <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Twitter page (opens in a new tab)">
                                                                         <i class="fa-brands fa-twitter"></i>
                                                                     </a>
                                                                 </div>
