location finder removed and X social logo added

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#join-us">Join Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="find-a-shed.html">Find a shed</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -247,8 +244,8 @@
                                                                     <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Instagram page (opens in a new tab)">
                                                                         <i class="fa-brands fa-instagram"></i>
                                                                     </a>
-                                                                    <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Twitter page (opens in a new tab)">
-                                                                        <i class="fa-brands fa-twitter"></i>
+                                                                    <a href="https://www.x.com" arget="_blank" rel="noopener noreferrer" aria-label="Visit our X page (opens in a new tab)">
+                                                                        <i class="fa-brands fa-x-twitter"></i>
                                                                     </a>
                                                                 </div>
                                                             </div>
