--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -28,34 +27,36 @@
 <body>
 
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/favicon/favicon_io/favicon-32x32.png" alt="logo" class="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#stories">Stories</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#links">More info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#join-us">Join Us</a>
-                    </li>
-                </ul>
-            </div>
+<!-- Remove duplicate menu -->
+<!-- Original navigation menu -->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--primary-color);">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img src="assets/favicon/favicon_io/favicon-32x32.png" alt="logo" class="logo">
+        </a>
+        <!-- Burger menu button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Collapsible menu -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#stories">Stories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#links">More info</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#join-us">Join Us</a>
+                </li>
+            </ul>
         </div>
-    </nav>
-
+    </div>
+</nav>
     <!-- Hero -->
 
     <header id="home" class="header hero" style="padding: 80px 0; margin-bottom: 30px;">
@@ -272,9 +273,7 @@
 </footer>
 
 <!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
  <!-- Custom JS -->
  <script>
