--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
         <a class="navbar-brand" href="index.html">
             <img src="assets/favicon/favicon_io/favicon-32x32.png" alt="logo" class="logo">
         </a>
-        <!-- Burger menu button -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+
+<!-- Toggler button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+
         <!-- Collapsible menu -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
@@ -272,10 +275,7 @@
     <p>&copy; 2025 BW Wellness Project. All rights reserved.</p>
 </footer>
 
-<!-- Bootstrap JS and dependencies -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
- <!-- Custom JS -->
+<!-- Custom JS -->
  <script>
     function showSuccessMessage(event) {
         event.preventDefault(); // Prevent the default form submission
@@ -290,6 +290,8 @@
         return false;
     }
 </script>
+<!-- Bootstrap JS and dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
